--- a/index.html
+++ b/index.html
@@ -239,6 +239,27 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> All r
 								</div>
 							</div>
 						</div>
+						<div class="col-md-6 " data-animate-effect="fadeInRight">
+							<div class="shawdow project" style="background-image: url(images/);">
+								<div class="desc"><a href="project10.html">
+									<div class="con">
+										<h3 style=color:white>Inclusion & Diversity</h3>
+										<span>Design Ideas</span>
+										
+									</div></a>
+								</div>
+							</div>
+						</div>
+						<div class="col-md-6 " data-animate-effect="fadeInRight">
+							<div class="shawdow project" style="background-image: url(images/);">
+								<div class="desc"><a href="project11.html">
+									<div class="con">
+										<h3 style=color:white>Somathestics</h3>
+										<span>Design Ideas</span>
+									</div></a>
+								</div>
+							</div>
+						</div>
 					</div>
 				</div>
 			</section>
