--- a/project10.html
+++ b/project10.html
@@ -26,13 +26,6 @@
 	<link rel="stylesheet" href="css/owl.theme.default.min.css">
 	<!-- Theme style  -->
 	<link rel="stylesheet" href="css/style.css">
-
-	<!-- Modernizr JS -->
-	<script src="js/modernizr-2.6.2.min.js"></script>
-	<!-- FOR IE9 below -->
-	<!--[if lt IE 9]>
-	<script src="js/respond.min.js"></script>
-	<![endif]-->
  
    <style>
 img {
@@ -76,7 +69,74 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> All r
   
         <div id="colorlib-main" style="padding: 20px;">
     <h1>Inclusion & Diversity</h1>
+	<h3>Project Description</h3>
+		 <p>During my UX307 class, inclusion and diversity were explored. I chose to focus on navigation for the blind for the first project and clothing sizes for different cultures on the second project. The third project combines the two. Navigation for visually challenged people can be difficult as they cannot see where they are going. This is especially true in tortuous places with hard to detect directional signals. This problem reinforces the stereotype that people with disabilities can not be independent and people may not want to confirm this idea. Another present-day problem is clothing sizes in North America are often tailored to the majority which can cause minorities to feel excluded. Ethnic groups such as Asians often do not fit into Western sizes. Navigation for the blind and minority clothing sizes will be the two focus of my class project where I investigate inclusion and diversity. </p>
+		
+		 <div class="row">
+		   <div class="col-md-12">
+			<div class="timeline-centered">
+				<article class="timeline-entry animate-box" data-animate-effect="fadeInLeft">
+				   <div class="timeline-entry-inner">
 
+					  <div class="timeline-icon color-1">
+						 <i>1</i>
+					  </div>
+
+					  <div class="timeline-label">
+						 <h2>Project 1</h2>
+						 <img src="images/ymca.png" alt="Floor Plan" style="height:600px">
+						 <p>Above shows an example of a ingrained lines on the floor. This can help the blind to navigate indoors. The main pathways can be signalled using three parallel lines and the narrow pathway outlined using one line. Directional arrows are also marked out to indicate the direction of the exit. Moreover, this not only benefits people visually impaired but it also signals to everyone where the exit is. </p>
+					  </div>
+				   </div>
+				</article>
+
+
+				<article class="timeline-entry animate-box" data-animate-effect="fadeInRight">
+				   <div class="timeline-entry-inner">
+					  <div class="timeline-icon color-2">
+						 <i>2</i>
+					  </div>
+					  <div class="timeline-label">
+						  <h2>Project 2</h2>
+						  <img src="images/clips.png" alt="Clips" style="height:600px">
+						 <p>A solution to the clothing problem could be to create clips that would attach to clothes to adjust the size. These clips would be rubbery and soft so that it’s comfortable and sticks on to the fabric. These clips can be used in a variety of ways: the clips can fold up or scrunch up parts of the clothes. The flexibility gives the user freedom in how they want to express their style. </p>
+					  </div>
+				   </div>
+				</article>
+
+				<article class="timeline-entry animate-box" data-animate-effect="fadeInLeft">
+				   <div class="timeline-entry-inner">
+					  <div class="timeline-icon color-3">
+						 <i>3</i>
+					  </div>
+					  <div class="timeline-label">
+						  <h2>Project 3</h2>
+						  <img src="images/combination.png" alt="Combination" style="height:600px">
+						 <p>For the third project, projects 1 and 2 were combined. A clip that vibrates as the user gets closer to the exit was invented. The clips foster diversity by resizing clothes and foster inclusion by helping users navigate indoor spaces.</p> 
+							<h4>Evaluation of Final Design</h4>
+							<p>The large round ends on the clips to help people with arthritis. However, people with very limited motor movements may still be excluded. Society may also look down upon people using assistive devices, however, the clips are small and subtle making it not too noticeable. This design may also be difficult to implement as it requires both public buildings and the user of the clips to accept the idea. The public buildings would need to code the vibrations. The two-step process may make this design complicated to implement.
+							</p>
+					  </div>
+				   </div>
+				</article>
+
+			   
+				<article class="timeline-entry begin animate-box" data-animate-effect="fadeInBottom">
+				   <div class="timeline-entry-inner">
+					  <div class="timeline-icon color-none">
+					  </div>
+				   </div>
+				</article>
+			 </div>
+		  </div>
+	  </div>
+	  <h3 class="center">Process</h3>
+	  <div class="col-md-12 text-center animate-box" style="padding: 0px 0px 0px 100px;">
+		<div class="services color-3" >
+				<p>In these designs, the problem was first assessed. Exclusionary features, social and psychological barriers were looked at. This inspiration phase was effective to gain a better understanding of the problem and dive deeper into the situation. However, reflecting back, the next step should have been to do more user research. Ethnography of how the visually impaired currently navigate or user interviews of how minority groups feel about clothing sizes should have been done. This step could have allowed me to have a better understanding of current workarounds and what the user needs and rather than just knowing their environmental situation. After inspiration, the ideation phase began, and ideas were brainstormed. While coming up with these ideas, it was a challenge to think of ideas that were new and innovative. However, after wandering around in my room, the ideas came to mind. While generating ideas, it was helpful to do another task while keeping the design challenge in mind. A sketch was then drawn for the final idea using clear labels to illustrate the idea. Lastly, an explanatory report was written. Through this process, I learned how exclusionary features can affect inclusivity. I also learned about the social and physiological logical impact design can have. Moving forward, I will be more conscious of exclusion in design. </p>
+		   
+		</div></div>
+	 </div>
 				</div>
 				</div>
 				</div>
