--- a/index.html
+++ b/index.html
@@ -240,7 +240,7 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> All r
 							</div>
 						</div>
 						<div class="col-md-6 " data-animate-effect="fadeInRight">
-							<div class="shawdow project" style="background-image: url(images/);">
+							<div class="shawdow project" style="background-image: url(images/inclusion_diversity);">
 								<div class="desc"><a href="project10.html">
 									<div class="con">
 										<h3 style=color:white>Inclusion & Diversity</h3>
