--- a/index.html
+++ b/index.html
@@ -251,11 +251,11 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> All r
 							</div>
 						</div>
 						<div class="col-md-6 " data-animate-effect="fadeInRight">
-							<div class="shawdow project" style="background-image: url(images/);">
+							<div class="shawdow project" style="background-image: url(images/Mark2.jpeg);">
 								<div class="desc"><a href="project11.html">
 									<div class="con">
-										<h3 style=color:white>Somathestics</h3>
-										<span>Design Ideas</span>
+										<h3 style=color:white>Navigation Tool</h3>
+										<span>Invention</span>
 									</div></a>
 								</div>
 							</div>
